--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -93,7 +93,7 @@ mobile_device_detect("/index_m.html");
 <div>
 <h1 id="h1" class="transition-in"></h1>
 <h2 id="h2" class="transition-in" style="font-family: microsoft yahei"></h2>
-<div class="center"><img src="wing.png" alt="WELCOME TO MACAU GRAND LISBOA!"></div>
+<div class="center"><img src="wing.png" alt="WELCOME!!!"></div>
     <p>
   </div>
 </div>
