--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <script language="JavaScript" type="text/JavaScript">function redirect(){    var loc = location.href.split(':');  if(loc[0]=='https')        {          location.href='http:'+loc[1];          }}                      onload=redirect  </script>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
