--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="refresh" content="0;url=https://qiay.cc">
+<meta http-equiv="refresh" content="0;url=https://qiay.cc/">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
