--- a/index_m.html
+++ b/index_m.html
@@ -23,3 +23,10 @@ body {
     background-color: #000000;
 }
 </style>
+
+<script type="text/javascript">
+   var targetProtocol = "https:";
+   if (window.location.protocol != targetProtocol)
+   window.location.href = targetProtocol +
+   window.location.href.substring(window.location.protocol.length);
+</script>
