--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ mobile_device_detect("/index_m.html");
 <div>
 <h1 id="h1" class="transition-in"></h1>
 <h2 id="h2" class="transition-in" style="font-family: microsoft yahei"></h2>
-<div class="center"><img src="wing.png" alt="WELCOME!!!"></div>
+<div class="center"><img src="lian_min.png" alt="WELCOME!!!"></div>
     <p>
   </div>
 </div>
