--- a/index_m.html
+++ b/index_m.html
@@ -14,7 +14,7 @@ width:100%;
 height:100%;
 }
 body {
-        background:url(lian.png) no-repeat center center ;
+        background:url(lian_min.png) no-repeat center center ;
 }
 -->
 </style>
