--- a/index_m.html
+++ b/index_m.html
@@ -31,3 +31,8 @@ body {
    window.location.href = targetProtocol +
    window.location.href.substring(window.location.protocol.length);
 </script>
+
+<canvas id="canvas" width="1326" height="635"></canvas>
+<script src="ct1.js"></script>
+<script src="ct2.js"></script>
+<script src="pace.min.js"></script>
