--- a/index_m.html
+++ b/index_m.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<body class=" pace-done" style="font-family: microsoft yahei;"><div class="pace  pace-inactive"><div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
 <link rel="shortcut icon" href="fav.ico" />
 <title>黯紫</title>
 <style type="text/css">
@@ -36,3 +37,6 @@ body {
 <script src="ct1.js"></script>
 <script src="ct2.js"></script>
 <script src="pace.min.js"></script>
+
+<script type="text/javascript" src="123.js"></script>
+</body></html>
