--- a/index_m.html
+++ b/index_m.html
@@ -2,7 +2,7 @@
 <head>
 <body class=" pace-done" style="font-family: microsoft yahei;"><div class="pace  pace-inactive"><div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
 <link rel="shortcut icon" href="fav.ico" />
-<title>黯紫</title>
+<title>黯紫2</title>
 <style type="text/css">
 <!--
 * {
