--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div>
 <h1 id="h1" class="transition-in"></h1>
 <h2 id="h2" class="transition-in" style="font-family: microsoft yahei"></h2>
-<div class="center"><img src="lian_min.png" alt="WELCOME!!!"></div>
+<div class="center"><img src="lian_min.png" alt="黯紫"></div>
     <p>
   </div>
 </div>
