--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,24 +11,7 @@
 
 <link rel="stylesheet" type="text/css" href="ct.css">
 
-<link type="text/css" href="pace-theme-minimal.css" rel="stylesheet">
-<style type="text/css">
-  .btn_a:hover{ background: #fff;}
-</style>
-
 </head>
-<body class=" pace-done" style="font-family: microsoft yahei;"><div class="pace  pace-inactive"><div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
-  <div class="pace-progress-inner"></div>
-</div>
-<div class="pace-activity"></div></div>
-
-<div class="pace  pace-inactive">
-<div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
-  <div class="pace-progress-inner"></div>
-</div>
-<div class="pace-activity"></div>
-
-</div>
 
 <div id="container">
 <div>
@@ -38,10 +22,9 @@
   </div>
 </div>
 
-<canvas id="canvas" width="800" height="635"></canvas>
+<canvas id="canvas" width="1366" height="635"></canvas>
 <script src="ct1.js"></script>
 <script src="ct2.js"></script>
-<script src="pace.min.js"></script>
 
-<script type="text/javascript" src="123.js"></script>
-</body></html>
+</body>
+</html>
