--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>南阳</title>
+    <title>南阳智慧园导航</title>
 </head>
 <style>
     body {
