--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@ pagespeed.localStorageCacheInit();
 <div>
 <h1 id="h1" class="transition-in"></h1>
 <h2 id="h2" class="transition-in" style="font-family: microsoft yahei"></h2>
-<div class="center"><img src="lian_min.png" alt="WELCOME!!!"></div>
+<div class="center"><img src="https://s1.ax1x.com/2020/07/29/aZP7z6.png" alt="WELCOME!!!"></div>
     <p>
   </div>
 </div>
