--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 <div id="container">
 <div>
 <h1 id="h1" class="transition-in"></h1>
-<h2 id="h2" class="transition-in" style="font-family: microsoft yahei"></h2>
+<h2 id="h2" class="transition-in"></h2>
 <div class="center"><img src="https://s1.ax1x.com/2020/07/29/aZP7z6.png" alt="黯紫"></div>
     <p>
   </div>
 </div>
 
 <canvas id="canvas" width="1366" height="635"></canvas>
+<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;">
 <script src="ct1.js"></script>
 <script src="ct2.js"></script>
+<script src="cur.js"></script>
 
 </body>
 </html>
